# webview-test

./: .gitignore  CMakeLists.txt  README.md  basic.cc
assets/: app.html
libs/webview2/: Microsoft.Web.WebView2.nuspec
libs/webview2/_rels/: .rels
